<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="homeViewModel"
            type="com.example.vendingmachine.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_spacing"
            android:fontFamily="@font/vt323"
            android:text="Everything for just $1!!!"
            android:textColor="@color/colorAccent"
            android:textSize="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <GridLayout
            android:id="@+id/grid_background"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/large_spacing"
            android:layout_marginEnd="@dimen/large_spacing"
            android:background="@drawable/grid_background"
            android:columnCount="3"
            android:padding="@dimen/medium_space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.1">

            <ImageView
                android:id="@+id/cat_button"
                style="@style/ImageView.Vending"
                android:contentDescription="@string/cat"
                android:onClick="@{(view)-> homeViewModel.setApiKey(view)}"
                android:src="@drawable/cat" />

            <ImageView
                android:id="@+id/boxer_button"
                style="@style/ImageView.Vending"
                android:contentDescription="@string/boxer"
                android:onClick="@{(view)-> homeViewModel.setApiKey(view)}"
                android:src="@drawable/boxer" />

            <ImageView
                android:id="@+id/mustache_button"
                style="@style/ImageView.Vending"
                android:contentDescription="@string/mustache"
                android:onClick="@{(view)-> homeViewModel.setApiKey(view)}"
                android:src="@drawable/moustache" />

            <ImageView
                android:id="@+id/button_button"
                style="@style/ImageView.Vending"
                android:contentDescription="@string/bull"
                android:onClick="@{(view)-> homeViewModel.setApiKey(view)}"
                android:src="@drawable/coo" />

            <ImageView
                style="@style/ImageView.Vending"
                android:id="@+id/fox_button"
                android:contentDescription="@string/fox"
                android:onClick="@{(view)-> homeViewModel.setApiKey(view)}"
                android:src="@drawable/foxy" />

            <ImageView
                android:id="@+id/dog_button"
                style="@style/ImageView.Vending"
                android:contentDescription="@string/dog"
                android:onClick="@{(view)-> homeViewModel.setApiKey(view)}"
                android:src="@drawable/doggo" />


        </GridLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_spacing"
            android:layout_marginTop="@dimen/medium_space"
            android:layout_marginEnd="@dimen/large_spacing"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grid_background">

            <ImageView
                android:id="@+id/coins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/coin" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/coin_drag_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_spacing"
            android:layout_marginEnd="@dimen/large_spacing"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Insert Coin 》》"
                android:layout_marginEnd="@dimen/medium_space"/>

            <TextView
                android:id="@+id/balance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{homeViewModel.balanceString}"
                android:textSize="64dp"
                />

            <TextView
                android:layout_marginStart="@dimen/medium_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="《《 Insert Coin"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>